--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -17,5 +17,8 @@
     <!-- Calls `bar` helper, defined at instance-level. -->
     <p>{{bar}}</p>
 
+    <div class="data">
+        {{data.para1}}
+    </div>
 </body>
 </html>
