--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -18,7 +18,7 @@
     <p>{{bar}}</p>
 
     <div class="data">
-        {{data.param}}<br> {{data.income.incomes}} <br> {{data.income.incomeTax}} <br> {{data.income.incomeAfterTax}}
+        {{data.param}}<br> Income: {{data.income.incomes}} <br> Income Tax: {{data.income.incomeTax}} <br> Income After Tax:{{data.income.incomeAfterTax}}
     </div>
 <!--
     <form onSubmit="return handleIncomeCalculation()">
