--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -46,9 +46,20 @@ body {
     color: white;
 }
 
+.w3-btn:hover{
+    box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19)
+}
+
+.w3-btn,.w3-button{
+    -webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none
+}  
 .annual-income {
     display: inline-block;
     margin: 0px 5px;
+}
+
+.ng-cloak {
+    display: none !important;
 }
 
 path { 
